--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,4 +1,17 @@
 .gallery{
-    margin: 20px;
-    background-color: #5f66a0;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.photo-card{
+margin: 10px;
+// width: 20%;
+margin: 10px;
+}
+
+.info{
+    display: flex;
+    justify-content: space-around;
 }
