--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,11 @@
 @import './search-form';
-@import './gallery.scss';
+@import './body';
+
+@import './gallery';
+@import './container';
+@import './load-more';
+
+
 
 
 
